--- a/catalog/view/theme/default/index.html
+++ b/catalog/view/theme/default/index.html
@@ -10,7 +10,6 @@
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
 		<script type="text/javascript" src="js/swiper.js" ></script>
-		<script type="text/javascript" src="js/index.js" ></script>
 		<title>HOME</title>
 	</head>
 	<body>
@@ -39,7 +38,7 @@
 				<!--logo-->
 				<div class="logo">
 					<a href="###">
-						<img src="img/png/logo.png"/>
+						<img class="changeimage" data-image='img/png/logo.png' data-mimage='img/png/yd_logo.png'  />
 					</a>
 				</div>	
 				
@@ -214,13 +213,13 @@
 				<div class="swiper-container"id="swiper1">
 				    <div class="swiper-wrapper" style="cursor:-webkit-grab;">
 				      	<div class="swiper-slide ban_img">
-				      		<img class="ban1" src="img/jpg/banner1.jpg" alt="" />
+				      		<img class="ban1 changeimage" data-image='img/jpg/banner1.jpg' data-mimage='img/jpg/yd_banner1.jpg'  />
 				      	</div>
 					    <div class="swiper-slide ban_img">
-					    	<img class="ban2" src="img/jpg/banner2.jpg" alt="" />
+					    	<img class="ban2 changeimage" data-image='img/jpg/banner2.jpg' data-mimage='img/jpg/yd_banner2.jpg'  />
 					    </div>
 					    <div class="swiper-slide ban_img">
-					    	<img class="ban3" src="img/jpg/banner3.jpg" alt="" />
+					    	<img class="ban3 changeimage" data-image='img/jpg/banner3.jpg' data-mimage='img/jpg/yd_banner3.jpg'  />
 					    </div>
 				    </div>
 				    <div class="swiper-pagination"></div>
@@ -242,7 +241,7 @@
 					<li>
 						<a href="###">
 							<div class="pic clearfix">
-								<img src="img/jpg/pc_index1_1.jpg" alt="" />
+								<img class="changeimage" data-image='img/jpg/pc_index1_1.jpg' data-mimage='img/jpg/yd_index1_1.jpg'  />
 							</div>
 							<div class="text">
 								<h2>NEW ARRIEV</h2>
@@ -253,7 +252,7 @@
 					<li>
 						<a href="###">
 							<div class="pic clearfix">
-								<img src="img/jpg/pc_index1_2.jpg" alt="" />
+								<img class="changeimage" data-image='img/jpg/pc_index1_2.jpg' data-mimage='img/jpg/yd_index1_2.jpg'  />
 							</div>
 							<div class="text">
 								<h2>FLASH SALE</h2>
@@ -264,7 +263,7 @@
 					<li>
 						<a href="###">
 							<div class="pic clearfix">
-								<img src="img/jpg/pc_index1_3.jpg" alt="" />
+								<img class="changeimage" data-image='img/jpg/pc_index1_3.jpg' data-mimage='img/jpg/yd_index1_3.jpg'  />
 							</div>
 							<div class="text">
 								<h2>BUNDLE DEAL</h2>
@@ -289,7 +288,7 @@
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index2_1.jpg"/>
+								<img class="changeimage" data-image='img/jpg/pc_index2_1.jpg' data-mimage='img/jpg/yd_index2_1.jpg'  />
 								<p>Brazilian Virgin Hair (One Donor Virgin Hair)</p>
 							</div>
 							<div class="text">
@@ -301,7 +300,7 @@
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index2_2.jpg"/>
+								<img class="changeimage" data-image='img/jpg/pc_index2_2.jpg' data-mimage='img/jpg/yd_index2_2.jpg'  />
 								<p>Brazilian Virgin Hair (One Donor Virgin Hair)</p>
 							</div>
 							<div class="text">
@@ -313,7 +312,7 @@
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index2_3.jpg"/>
+								<img src="img/jpg/pc_index2_3.jpg" />
 								<p>Brazilian Virgin Hair (One Donor Virgin Hair)</p>
 							</div>
 							<div class="text">
@@ -329,7 +328,7 @@
 						<h1>Fuller Virgin  Peruvian Hair</h1>
 						<a href="###" class="a_btn">VIEW MORE &nbsp;&nbsp;><span class="triangle"><em></em></span></a>
 					</div>
-					<img class="top2_img" src="img/jpg/pc_index3.jpg"/>
+					<img class="top2_img changeimage" data-image='img/jpg/pc_index3.jpg' data-mimage='img/jpg/yd_index3.jpg'  />
 					
 				</div>
 				
@@ -337,7 +336,7 @@
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index3_1.jpg"/>
+								<img class="changeimage" data-image='img/jpg/pc_index3_1.jpg' data-mimage='img/jpg/yd_index3_1.jpg'  />
 								<p>Bundle 3 Tone Peruvian Virgin Hair Body Wave</p>
 							</div>
 							<div class="text">
@@ -349,7 +348,7 @@
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index3_2.jpg"/>
+								<img class="changeimage" data-image='img/jpg/pc_index3_2.jpg' data-mimage='img/jpg/yd_index3_2.jpg'  />
 								<p>Bundle 3 Tone Peruvian Virgin Hair Body Wave</p>
 							</div>
 							<div class="text">
@@ -361,7 +360,7 @@
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index3_3.jpg"/>
+								<img class="changeimage" data-image='img/jpg/pc_index3_3.jpg' data-mimage='img/jpg/yd_index3_3.jpg'  />
 								<p>Bundle 3 Tone Peruvian Virgin Hair Body Wave</p>
 							</div>
 							<div class="text">
@@ -373,7 +372,7 @@
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index3_4.jpg"/>
+								<img class="changeimage" data-image='img/jpg/pc_index3_4.jpg' data-mimage='img/jpg/yd_index3_4.jpg'  />
 								<p>Bundle 3 Tone Peruvian Virgin Hair Body Wave</p>
 							</div>
 							<div class="text">
@@ -389,14 +388,14 @@
 						<h1>Regular Virgin Peruvian Hair</h1>
 						<a href="###" class="a_btn">VIEW MORE &nbsp;&nbsp;><span class="triangle"><em></em></span></a>
 					</div>
-					<img class="top3_img" src="img/jpg/pc_index4.jpg"/>
+					<img class="top3_img changeimage" data-image='img/jpg/pc_index4.jpg' data-mimage='img/jpg/yd_index4.jpg'  />
 				</div>
 				
 				<ol class="ol_img4 ol_img clearfix">
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index4_1.jpg"/>
+								<img class="changeimage" data-image='img/jpg/pc_index4_1.jpg' data-mimage='img/jpg/yd_index4_1.jpg'  />
 								<p>Bundle 3 Tone Peruvian Virgin Hair Body Wave</p>
 							</div>
 							<div class="text">
@@ -408,7 +407,7 @@
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index4_2.jpg"/>
+								<img class="changeimage" data-image='img/jpg/pc_index4_2.jpg' data-mimage='img/jpg/yd_index4_2.jpg'  />
 								<p>Bundle 3 Tone Peruvian Virgin Hair Body Wave</p>
 							</div>
 							<div class="text">
@@ -420,7 +419,7 @@
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index4_3.jpg"/>
+								<img class="changeimage" data-image='img/jpg/pc_index4_3.jpg' data-mimage='img/jpg/yd_index4_3.jpg'  />
 								<p>Bundle 3 Tone Peruvian Virgin Hair Body Wave</p>
 							</div>
 							<div class="text">
@@ -432,7 +431,7 @@
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index4_4.jpg"/>
+								<img class="changeimage" data-image='img/jpg/pc_index4_4.jpg' data-mimage='img/jpg/yd_index4_4.jpg'  />
 								<p>Bundle 3 Tone Peruvian Virgin Hair Body Wave</p>
 							</div>
 							<div class="text">
@@ -455,14 +454,14 @@
 					<div class="bt2">
 						<a href="###" class="a_btn">VIEW MORE &nbsp;&nbsp;><span class="triangle"><em></em></span></a>
 					</div>
-					<img class="top4_img" src="img/jpg/pc_index5.jpg"/>
+					<img class="top4_img changeimage" data-image='img/jpg/pc_index5.jpg' data-mimage='img/jpg/yd_index5.jpg'  />
 				</div>
 				
 				<ol class="ol_img5 ol_img clearfix">
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index5_1.jpg"/>
+								<img class="changeimage" data-image='img/jpg/pc_index5_1.jpg' data-mimage='img/jpg/yd_index5_1.jpg'  />
 								<p>Bundle 3 Tone Peruvian Virgin Hair Body Wave</p>
 							</div>
 							<div class="text">
@@ -474,7 +473,7 @@
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index5_2.jpg"/>
+								<img class="changeimage" data-image='img/jpg/pc_index5_2.jpg' data-mimage='img/jpg/yd_index5_2.jpg'  />
 								<p>Bundle 3 Tone Peruvian Virgin Hair Body Wave</p>
 							</div>
 							<div class="text">
@@ -486,7 +485,7 @@
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index5_3.jpg"/>
+								<img class="changeimage" data-image='img/jpg/pc_index5_3.jpg' data-mimage='img/jpg/yd_index5_3.jpg'  />
 								<p>Bundle 3 Tone Peruvian Virgin Hair Body Wave</p>
 							</div>
 							<div class="text">
@@ -498,7 +497,7 @@
 					<li>
 						<a href="###">
 							<div class="pic">
-								<img src="img/jpg/pc_index5_4.jpg"/>
+								<img class="changeimage" data-image='img/jpg/pc_index5_4.jpg' data-mimage='img/jpg/yd_index5_4.jpg'  />
 								<p>Bundle 3 Tone Peruvian Virgin Hair Body Wave</p>
 							</div>
 							<div class="text">
@@ -781,7 +780,7 @@
 		
 		<!--登录注册弹窗-->
 		<div class="modal img_modal">
-			<div class="text">
+			<div class="text" style="background:  url(img/jpg/pc_modal.jpg) no-repeat ;">
 				<div class="close"></div>
 				<!--<img class="login_img" src="img/jpg/pc_modal.jpg"/>-->
 				<a class="login_a" href="###"></a>
@@ -834,18 +833,41 @@
 			$(".img_modal").fadeIn();
 			clearInterval(login_time);
 		},5000)
-		$(".img_modal").click(function(e){
-			var close = $('.img_modal .text'); 
-		   	if(!close.is(e.target) && close.has(e.target).length === 0){
-		      	$(".img_modal").fadeOut();
-		      	clearInterval(login_time);
-			}
-		})
+		
 		//关闭登陆注册
 		$(".img_modal .close").click(function(){
 			$(".img_modal").fadeOut();
 			clearInterval(login_time);
 		})
+		
+		//替换手机端图片
+		var win = $(window).width();
+	        if(win<=750){
+	          $(".video_div .video").attr("poster","img/jpg/yd_video_bg.jpg");
+	        }else{
+			  $(".video_div .video").attr("poster","img/jpg/video_bg.jpg");
+	        }
+			if(win<=992){
+				$(".img_modal .text").css("background"," url(img/jpg/yd_modal.jpg) no-repeat ").css("background-size","4rem 4.5rem");
+			}else{
+					$(".img_modal .text").css("background"," url(img/jpg/pc_modal.jpg) no-repeat ");
+			}
+		$(window).resize(function() {
+			var win = $(window).width();
+			if(win<=750){
+	          $(".video_div .video").attr("poster","img/jpg/yd_video_bg.jpg");
+	        }else{
+			  $(".video_div .video").attr("poster","img/jpg/video_bg.jpg");
+	        }
+	        if(win<=992){
+				$(".img_modal .text").css("background"," url(img/jpg/yd_modal.jpg) no-repeat ").css("background-size","4rem 4.5rem");
+			}else{
+					$(".img_modal .text").css("background"," url(img/jpg/pc_modal.jpg) no-repeat ");
+			}
+		})
+		
 	})
+	
+	
 </script>
 		
