--- a/catalog/view/theme/default/css/common.css
+++ b/catalog/view/theme/default/css/common.css
@@ -59,6 +59,7 @@ header{position:fixed;top:0;left:0;width:100%;background: #fff;z-index:10;height
 .border-l{border-left: 1px solid #d8d8d8;}
 .border-b{border-bottom: 1px solid #ececec;}
 .ver-mid{display: inline-block;vertical-align: middle;}
+.red_i{color: #fd4f57;}
 .modal{width: 100%;height: 100%;position: fixed;left: 0;top: 0; z-index: 999;background: rgba(0,0,0,.6);}
 .zzc_div{width: 100%;height: 100%;position: fixed;z-index:11;left: 0;top: 0;background: rgba(0,0,0,.0);display: none;}
 
@@ -147,13 +148,13 @@ position: absolute;top: bottom:16px;right: -7px;}
 .nav .img_ol li:nth-child(4){background: url(../img/png/carts.png) no-repeat center center;margin-right: 0;}
 
 
-.nav form{border-bottom: 2px solid #d5af74;width: 320px;height: 32px;line-height: 32px;box-sizing: border-box;
+.nav form.search{border-bottom: 2px solid #d5af74;width: 320px;height: 32px;line-height: 32px;box-sizing: border-box;
 opacity: 0;background: #fff;border-radius: 5px 5px 0 0;position: absolute;right: 172px;z-index: 9;display: none;}
-.nav form .text_in{background: #fff;width: 286px;height: 30px;float: left;font-size: 16px;padding: 0 10px;
+.nav form.search .text_in{background: #fff;width: 286px;height: 30px;float: left;font-size: 16px;padding: 0 10px;
 box-sizing: border-box;}
-.nav form .btn_in{background: url(../img/png/in_search.png) no-repeat center center;width: 32px;
+.nav form.search .btn_in{background: url(../img/png/in_search.png) no-repeat center center;width: 32px;
 display: block;float: left;height: 30px;opacity: .5;}
-.nav form .close{position: absolute;right: 0;top: 5px;width: 25px;opacity: .5;cursor: pointer;display: none;}
+.nav form.search .close{position: absolute;right: 0;top: 5px;width: 25px;opacity: .5;cursor: pointer;display: none;}
 
 @keyframes myanimate1{
 	0%{width: 62px;opacity: 0;}
@@ -306,12 +307,12 @@ display: block;width: 100%;padding:0 0.4rem;box-sizing: border-box;}
 	.nav .mn_type .ul_type li:nth-child(2){background: url(../img/png/ngn1.png) no-repeat left center;background-size: 0.3rem 0.3rem;}
 	.nav .mn_type .ul_type li:nth-child(3){background: url(../img/png/zar1.png) no-repeat left center;background-size: 0.3rem 0.3rem;}
 	
-	.nav form{border-bottom: 2px solid #d5af74;width: 100%;height: 0.96rem;line-height: 0.96rem;box-sizing: border-box;
+	.nav form.search{border-bottom: 2px solid #d5af74;width: 100%;height: 0.96rem;line-height: 0.96rem;box-sizing: border-box;
 	opacity: 0;background: #fff;border-radius: 0;position: absolute;right: 0%;left: 0; top:1.2rem;z-index: 9;}
-	.nav form .text_in{background: transparent;width: 80%;height: 0.96rem;float: left;font-size: 0.24rem;padding: 0 10px;
+	.nav form.search .text_in{background: transparent;width: 80%;height: 0.96rem;float: left;font-size: 0.24rem;padding: 0 10px;
 	box-sizing: border-box;}
-	.nav form .btn_in{display: none;}
-	.nav form .close{position: absolute; right: 0.4rem;top: 0.3rem;width:0.36rem;opacity: .5;cursor: pointer;display: block;}
+	.nav form.search .btn_in{display: none;}
+	.nav form.search .close{position: absolute; right: 0.4rem;top: 0.3rem;width:0.36rem;opacity: .5;cursor: pointer;display: block;}
 	
 	@keyframes myanimate1{
 		0%{width: 62px;opacity: 0;}
