--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -35,26 +35,29 @@
 	.login .login_ul li{float: left;width:48%;background: #fff;}
 	.login .login_ul li:last-child{float: right;}
 	.login .login_ul li p.bt_p{font-size: 16px;color: #333;height:60px;line-height: 60px;background: #e4e4e4;padding: 0 40px;}
-	.login form {padding:62px 2.08vw 0 2.08vw;}
-	.login form label{display: block;}
-	.login form label span{font-size: 16px;color: #666;line-height: 45px;}
-	.login form label input{width: 100%;border: 1px solid #ccc;border-radius:3px;height:35px;line-height: 35px;
-	margin-bottom: 15px;padding: 0 10px;font-size: 17px;font-family: arial;color: #333;}
-	.login form label input::-webkit-input-placeholder{color: #ccc;}
-	.login form label input:-moz-placeholder{color: #ccc;}
-	.login form label input::-moz-placeholder{color: #ccc;}
-	.login form label input:-ms-input-placeholder{color: #ccc;}
-	.login form label input:focus{border: 1px solid #ff6700;}
-	.login form label a{font-size: 14px;line-height: 16px;color: #aaa;text-align: right;display:inline-block;float: right; border-bottom: 1px solid transparent;}
-	.login form label a:hover{color: #333;border-bottom: 1px solid #333;}
+	.login form.lr_form {padding:62px 2.08vw 0 2.08vw;}
+	.login form.lr_form label{display: block;clear: both;}
+	.login form.lr_form label span{font-size: 16px;color: #666;line-height: 45px;}
+	.login form.lr_form label input{width: 100%;border: 1px solid #ccc;border-radius:3px;height:35px;line-height: 35px;
+	margin-bottom: 10px;padding: 0 10px;font-size: 17px;font-family: arial;color: #333;}
+	.login form.lr_form label input::-webkit-input-placeholder{color: #ccc;}
+	.login form.lr_form label input:-moz-placeholder{color: #ccc;}
+	.login form.lr_form label input::-moz-placeholder{color: #ccc;}
+	.login form.lr_form label input:-ms-input-placeholder{color: #ccc;}
+	.login form.lr_form label input:focus{border: 1px solid #ff6700;}
+	.login form.lr_form label p{color: #fd4f57;margin-bottom: 10px;display: none;}
+	.login form.lr_form label p.off{display: block;}
+	.login form.lr_form label a{font-size: 14px;line-height: 16px;color: #aaa;text-align: right;display:inline-block;float: right; border-bottom: 1px solid transparent;}
+	.login form.lr_form label a:hover{color: #333;border-bottom: 1px solid #333;}
 	.login .res_form{padding: 30px 40px 0 40px;}
 	.login .res_form label span{line-height: 36px;}
 	.login .res_form label input{margin-bottom: 10px;height: 35px;line-height: 35px;}
 	.login .res_form label.label_name{width: 50%;float: left;}
-	.login .res_form label.label_names{width: 50%;float: left;}
+	.login .res_form label.label_names{width: 50%;float: left;clear: none;}
 	.login .res_form label.label_name input{width: 90%;}
 	.login .res_form label.label_names span,
 	.login .res_form .xy_div {position: relative;}
+	.login .res_form .xy_p{font-size: 14px;color: #fd4f57;margin-top: 10px;display: none;}
 	.login .res_form .xy_div input{position: absolute;width: 16px;height: 16px;top: 0;left: 0;z-index: 2;opacity: 0;cursor: pointer;margin: 0;}
 	.login .res_form .xy_div span{width:16px;height:16px;border-radius:2px;position: absolute;border:1px solid #000;z-index: 1;}
 	.login .res_form .xy_div span.span1{display: block;}
@@ -107,27 +110,44 @@
 	.pro_det_content .top .pro_img_ol li{width: 5vw;height: 5vw;background: #f5f5f5;margin-bottom: 0.83vw;border: 1px solid transparent;cursor: pointer;}
 	.pro_det_content .top .pro_img_ol li.active,
 	.pro_det_content .top .pro_img_ol li:hover{border: 1px solid #ccc;}
-	.pro_det_content .top .pro_big_img{width: 41.66vw;height: 41.66vw;float: left;}
+	.pro_det_content .top .pro_big_img{width: 40.5vw;height: 40.5vw;float: left;}
 	.pro_det_content .top .right{float: left;padding-left: 3.64vw;}
-	.pro_det_content .top .right a{font-size: 1.66vw;color: #333;line-height: 3.33vw;padding-top: 1.14vw;display: block;}
-	.pro_det_content .top p.price{font-family: san_r;color: #333;font-size: 1.56vw;line-height: 1.8vw;display: block;margin-bottom: 3.12vw;}
+	.pro_det_content .top .right a{font-size: 1.66vw;color: #333;line-height: 3.33vw;padding-top: 1vw;display: block;}
+	.pro_det_content .top p.price{font-family: san_r;color: #333;font-size: 1.56vw;line-height: 1.8vw;display: block;margin-bottom: 2.5vw;}
 	.pro_det_content .top p.price i{color: #ccc;text-decoration: line-through;margin-left: 0.46vw;}
 	.pro_det_content .top p.text_p{font-size: 0.83vw;color: #666;margin-bottom: 1.66vw;}
 	.pro_det_content .top p.text_p span{font-size: 0.93vw;color: #000;line-height: 0.93vw;}	
 	.pro_det_content label{display: inline-block;float: left;margin-right: 1.66vw;}
-	.pro_det_content label span{font-size: 0.83vw;line-height: 1.77vw; color: #666;float: left;}
+	.pro_det_content label>span{font-size: 0.83vw;line-height: 1.77vw; color: #666;float: left;}
 	.pro_det_content .price_input{clear: both;border: 1px solid #ccc;}
 	.pro_det_content .price_input span{display: block;float: left; width: 2.08vw;height: 2.08vw;cursor: pointer;}
 	.pro_det_content .price_input span.sub{background: url(../img/png/sub.png) no-repeat center center;background-size:0.68vw;}
 	.pro_det_content .price_input span.add{background: url(../img/png/add.png) no-repeat center center;background-size:0.68vw;}
 	.pro_det_content .price_input input{display: inline-block;width: 2.08vw;height: 2.08vw;line-height: 2.08vw; float: left;
 	border-right: 1px solid#ccc;border-left: 1px solid#ccc;text-align: center;}
-	.pro_det_content label select{float: left; clear: both;width: 8.33vw;height: 2.08vw;line-height: 2.08vw;
-	border: 1px solid #ccc;box-sizing: border-box;padding: 0 5%; cursor: pointer;}
+	.pro_det_content .select_div{background: #fff;text-align: center;position: relative;}
+	.pro_det_content .select_div button{width: 8.33vw; margin: auto;display: block;; border: 1px solid #ccc;height: 2.08vw;
+	font-size: 0.83vw;line-height: 2.08vw;background: #fff;box-sizing: content-box;}
+	@media only screen and (min-width: 993px) and (max-width: 1340px) {
+		.pro_det_content .select_div button{width: 10vw;}
+	}
+	.pro_det_content .select_div button:hover{background: #f5f5f5;cursor: pointer;}
+	.pro_det_content .select_div button span{background: url(../img/png/down.png) no-repeat right center;background-size: 0.72vw;padding-right: 1.2vw;}
+	.pro_det_content .select_div .select_ul{position: absolute;width: 100%;background: #fff;left:0;border-left: 1px solid #ccc;border-bottom: 1px solid #ccc;
+	display: none;z-index: 12;}
+	.pro_det_content .select_div ul{background: #fff;max-height: 11.5vw;padding: 1vw 0;overflow-y:scroll !important;}
+	.pro_det_content .select_div ul li{width:100%;margin: auto;height: 2.08vw;font-size: 0.83vw;line-height: 2.08vw;cursor: pointer;}
+	.pro_det_content .select_div ul li:hover{background: #f5f5f5;}
 	.pro_det_content .measurement{font-size: 0.83vw;color: #666;float: left;border-bottom: 1px solid #666;margin-top: 2.2vw;cursor: pointer;}
 	.pro_det_content .meas_img{position: absolute;right: 20vw;top: 14.8vw;width: 46.87vw;height: 41.66vw;display: none;}
-	.pro_det_content .right a.a_btn{width: 14.16vw;height: 2.08vw;line-height: 2.08vw;text-align: center;border-radius: 30px;
-	font-size: 0.83vw;color: #fff;background: #000;padding-top: 0;margin: 1.66vw 0 3.33vw 0;}
+	.pro_det_content .right a.a_btn{width: 14.16vw;height: 2.08vw;line-height: 2.08vw;text-align: center;border-radius: 4px;
+	font-size: 0.83vw;color: #fff;background: #333;padding-top: 0;margin: 1.66vw 0 3.33vw 0;float: left;}
+	.pro_det_content .right a.a_btn:hover{background: #555;}
+	.pro_det_content .right .xyd_btn{width: 8.3vw;border: 1px solid #ccc;color: #333;height: 2.08vw;line-height: 2.08vw;
+	border-radius: 4px;font-size: 0.83vw;padding-top: 0;margin: 1.66vw 0 3.33vw 2.08vw;float: left;box-sizing: content-box;
+	background: url(../img/png/shop_star.png) no-repeat right 0.83vw center;background-size: 0.83vw;}
+	.pro_det_content .right .xyd_btn span{display: block;float: left;height: 2.08vw;line-height: 2.1vw;padding-left: 1.25vw;}
+	
 	.pro_det_content .top dl dt{font-size: 0.93vw;color: #000;line-height: 0.93vw;margin-bottom: 0.43vw;}
 	.pro_det_content .top dl dd{font-size: 0.83vw;color: #666;line-height: 1.36vw;padding-left: 0.83vw;
 	background: url(../img/png/yuan.png)no-repeat left center;background-size: 0.41vw 0.41vw;}
@@ -175,7 +195,7 @@
 	.pro_det_content .pro_det_bot ul li .text{display: none;}
 	
 	/**购物车心愿列表**/
-	.shop_content{background: #f5f5f5;;padding: 0 1.25vw;margin-bottom:8.3vw;}
+	.shop_content{background: #f5f5f5;;padding: 0 1.25vw 8.3vw 1.25vw;}
 	.shop_content .top{text-align: center;background: #fff;margin: 1.25vw 0;padding: 2.08vw 0;}
 	.shop_content .top h1{font-size: 1.56vw;margin-bottom: 1.4vw;line-height: 1.6vw;}
 	.shop_content .top p{font-size: 0.83vw;line-height: 1vw;}
@@ -195,22 +215,23 @@
 	.shop_content .select_div button{width: 66.6%; margin: auto;display: block;border: 1px solid #ccc;height: 2.08vw;font-size: 0.83vw;line-height: 2.08vw;background: #fff;}
 	.shop_content .select_div button:hover{background: #f5f5f5;cursor: pointer;}
 	.shop_content .select_div button span{background: url(../img/png/down.png) no-repeat right center;background-size: 0.72vw;padding-right: 2vw;}
-	.shop_content .select_div ul{position: absolute;width: 66.7%;padding: 1vw 0;max-height: 11.5vw;overflow-y:scroll !important;
-	left: 16.7%;background: #fff;display: none;z-index: 12;border-left: 1px solid #ccc;border-bottom: 1px solid #ccc;}
-	.shop_content .select_div ul li{width:100%;margin: auto;height: 2.08vw;font-size: 0.83vw;line-height: 2.08vw;cursor: pointer;border-right: 1px solid #ccc;box-sizing: content-box;}
+	.shop_content .select_div .select_ul{position: absolute;width: 66.6%;background: #fff;left: 16.7%;border-left: 1px solid #ccc;border-bottom: 1px solid #ccc;
+	display: none;z-index: 12;}
+	.shop_content .select_div ul{background: #fff;max-height: 11.5vw;padding: 1vw 0;overflow-y:scroll !important;}
+	.shop_content .select_div ul li{width:100%;margin: auto;height: 2.08vw;font-size: 0.83vw;line-height: 2.08vw;cursor: pointer;}
 	.shop_content .select_div ul li:hover{background: #f5f5f5;}
 	.shop_content .shop_ul .shop_a{background: #fff;padding: 0.52vw 0 1.25vw 0;}
 	.shop_content .shop_ul .two_a{width: 66.6%;margin: auto;display: block;text-align: center;height: 2.08vw;line-height: 2.08vw;
 	background: #000;color: #fff;font-size: 0.83vw;border-radius: 50px;}
 	
+	@media (min-width:1281px ) and (max-width:1400px) {
+		.login .login_ul{width: 75%;}
+	}
+	@media (min-width:993px ) and (max-width:1280px) {
+		.login .login_ul{width: 94%;}
+	}
 }
 
-@media (min-width:1281px ) and (max-width:1400px) {
-	.login .login_ul{width: 75%;}
-}
-@media (min-width:993px ) and (max-width:1280px) {
-	.login .login_ul{width: 94%;}
-}
 
 @media only screen and (max-width:992px ) {
 	
@@ -232,25 +253,29 @@
 	.login .text .login_ul li{display: none;}
 	.login .text .login_ul li.active{display: block;}
 	.login .login_ul li p.bt_p{display: none;}
-	.login form{padding: 0.4rem 0.8rem 0.8rem 0.8rem;}
-	.login form label input::-webkit-input-placeholder{color: #ccc;}
-	.login form label input:-moz-placeholder{color: #ccc;}
-	.login form label input::-moz-placeholder{color: #ccc;}
-	.login form label input:-ms-input-placeholder{color: #ccc;}
-	.login form label span{font-size: 0.24rem;line-height: 0.46rem;color: #666;display: block;}
-	.login form label input{margin-bottom: 0.15rem;font-size: 0.24rem;font-size: 0.24rem;height: 0.67rem;line-height: 0.67rem;
+	.login form.lr_form{padding: 0.4rem 0.8rem 0.8rem 0.8rem;}
+	.login form.lr_form label{display: block;clear: both;}
+	.login form.lr_form label input::-webkit-input-placeholder{color: #ccc;}
+	.login form.lr_form label input:-moz-placeholder{color: #ccc;}
+	.login form.lr_form label input::-moz-placeholder{color: #ccc;}
+	.login form.lr_form label input:-ms-input-placeholder{color: #ccc;}
+	.login form.lr_form label span{font-size: 0.24rem;line-height: 0.46rem;color: #666;display: block;}
+	.login form.lr_form label input{margin-bottom: 0.1rem;font-size: 0.24rem;font-size: 0.24rem;height: 0.67rem;line-height: 0.67rem;
 	border: 1px solid #ccc;box-sizing: border-box;border-radius: 0.08rem;padding: 0 0.2rem;}
-	.login form label input:focus{border: 1px solid #ff6700;}
-	.login form label a{font-size: 0.2rem;color: #666;line-height: 0.22rem;float: right;}
+	.login form.lr_form label input:focus{border: 1px solid #ff6700;}
+	.login form.lr_form label p{color: #fd4f57;font-size: 0.18rem;margin-bottom: 0.1rem;display: none;}
+	.login form.lr_form label p.off{display: block;}
+	.login form.lr_form label a{font-size: 0.2rem;color: #666;line-height: 0.22rem;float: right;}
 	.login form .tj_input{height: 0.65rem;line-height: 0.65rem;margin: 1.29rem 0 0.4rem 0;font-size: 0.3rem;background: #000;color: #fff;border-radius: 0.08rem;}
 	.login .res_form .label_name{width: 2.6rem;float: left;}
-	.login .res_form .label_names{width: 2.6rem;float: right;}
+	.login .res_form .label_names{width: 2.6rem;float: right;clear: none;}
 	.login .res_form .label_names span{float: left;}
 	.login .res_form label span{line-height: 0.46rem;font-size: 0.24rem;float: left;}
 	.login .res_form label input{height: 0.67rem;line-height: 0.67rem;margin-bottom: 0.15rem;}
 	.login .res_form {padding: 0.4rem 0.8rem 0 0.8rem;}
 	.login .res_form .tj_input{margin: 0.6rem 0;}
 	.login .res_form .xy_div{position: relative;}
+	.login .res_form .xy_p{font-size:0.16rem;color: #fd4f57;margin-top: 0.1rem;display: none;}
 	.login .res_form .xy_div input{position: absolute;width: 0.25rem;height: 0.25rem;top: 0;left: 0;z-index: 2;opacity: 0;cursor: pointer;margin: 0;}
 	.login .res_form .xy_div span{width: 0.25rem;height: 0.25rem;border-radius:2px;position: absolute;border:1px solid #000;z-index: 1;}
 	.login .res_form .xy_div span.span1{display: block;}
@@ -320,15 +345,22 @@
 	.pro_det_content .price_input span.add{background: url(../img/png/add.png) no-repeat center center;background-size:0.26rem;}
 	.pro_det_content .price_input input{display: inline-block;width: 0.8rem;height: 0.8rem;line-height: 0.8rem; float: left;
 	border-right: 1px solid#ccc;border-left: 1px solid#ccc;text-align: center;font-size: 0.32rem;color: #000;}
-	.pro_det_content .len_label select{display: none;}
+	.pro_det_content .len_label .select_div{display: none;}
 	.pro_det_content .len_label ul{display: block !important;margin:  0rem -0.19rem;padding-top: 0.15rem; clear: both;}
 	.pro_det_content .len_label ul li{width: 2rem;height: 0.55rem;line-height: 0.55rem;border-radius: 30px;
 	background: #f5f5f5;font-size: 0.22rem;font-family: san_r;text-align: center;float: left;margin: 0 0.18rem 0.3rem 0.18rem;}
 	.pro_det_content .len_label ul li.active{color: #fff;background: #d6af74;}
 	.pro_det_content .measurement{font-family: san_r; font-size:0.2rem;color: #666;border-bottom: 1px solid #666;position: absolute;top: 0.9rem;right: 0;}
 	.pro_det_content .meas_img{position: absolute;right: 2rem;top: 0;width:4rem;height:3rem;display: none;}
-	.pro_det_content .right a.a_btn{width: 100%;height: 0.8rem;line-height: 0.8rem;text-align: center;border-radius: 50px;
-	font-size: 0.3rem;color: #fff;background: #000;margin: 0.2rem 0 0.4rem 0;font-family: san_r;}
+	
+	.pro_det_content .right a.a_btn{width: 5rem;height: 0.8rem;line-height: 0.8rem;text-align: center;border-radius: 4px;
+	font-size: 0.3rem;color: #fff;background: #000;margin: 0.2rem 0 0.4rem 0;font-family: san_r;float: left;}
+	
+	.pro_det_content .right .xyd_btn{width:0.8rem;border: 1px solid #ccc;color: #333;height: 0.8rem;line-height: 0.8rem;
+	border-radius: 4px;margin:  0.2rem 0 0.4rem 0.4rem;float: left;box-sizing: content-box;
+	background: url(../img/png/shop_star.png) no-repeat center center;background-size: 0.38rem 0.36rem;}
+	.pro_det_content .right .xyd_btn span{display: none;}
+	
 	.pro_det_content .top .bot_text{border-top: 0.2rem solid #f5f5f5; padding: 0 0.4rem;}
 	.pro_det_content .top .text_p2{margin-top: 0.4rem;color: #666;font-size: 0.2rem !important;margin-bottom: 0.2rem;}
 	.pro_det_content .top .text_p2 span{clear: both;width: 100%;display: block;}
@@ -376,6 +408,38 @@
 	.pro_det_content .pro_det_bot ul li .text .p1{font-family: san_r;font-size: 0.2rem;color: #000;line-height: 0.26rem;}
 	.pro_det_content .pro_det_bot ul li .text .p2{font-family: san_r;font-size: 0.18rem;color: #333;line-height: 0.22rem;
 	width: 100%;text-overflow: ellipsis;white-space: nowrap;overflow: hidden;}
+	
+	/**购物车心愿列表yd**/
+	.shop_content{background: #f5f5f5;;padding: 0 0.2rem 0.8rem 0.2rem;}
+	.shop_content .top{text-align: center;background: #fff;margin: 0.2rem 0;padding: 0.5rem 0;}
+	.shop_content .top h1{font-family: san_b;font-size: 0.3rem;}
+	.shop_content .top p{display: none;}
+	
+	.shop_content .shop_ul{margin: 0 -0.05rem;}
+	.shop_content .shop_ul>li{width: 50%;padding: 0 0.05rem;float: left;position: relative;margin-bottom: 0.3rem;}
+	.shop_content .shop_ul .pic_img{width: 100%;overflow: hidden;}
+	.shop_content .shop_ul .pic_img img{display: block;transition: all .5s;}
+	.shop_content .shop_ul .one_a:hover .pic_img img{transform: scale(1.2);}
+	.shop_content .shop_ul .text{text-align: center;padding-bottom: 0.94vw;background: #fff;}
+	.shop_content .shop_ul .text span{font-family: san_m;font-size: 0.24rem;line-height: 0.3rem;margin:0.25rem 0 0.1rem 0;display: block;color: #000;}
+	.shop_content .shop_ul .text p{font-family: san_r;font-size:0.2rem;line-height: 0.3rem; padding: 0 0.05rem;box-sizing: border-box;
+	text-overflow: ellipsis;white-space: nowrap;overflow: hidden;}
+	.shop_content .shop_ul .text p.p1{font-size: 0.18rem;line-height: 0.22rem;}
+	.shop_content .shop_ul .close{width: 0.4rem;height: 0.4rem;position: absolute;top: 0.52vw;right: 0.78vw;
+	background: url(../img/png/close3.png) no-repeat;background-size: 0.4rem 0.4rem;}
+	.shop_content .select_div{background: #fff;padding: 0.1rem 0 0.4rem 0.2rem;position: relative;width: 70%;float: left;}
+	.shop_content .select_div button{width: 100%; margin: auto;display: block;border: 1px solid #ccc;height: 0.5rem;font-size: 0.2rem;line-height: 0.5rem;background: #fff;}
+	.shop_content .select_div button:hover{background: #f5f5f5;cursor: pointer;}
+	.shop_content .select_div button span{background: url(../img/png/down.png) no-repeat right center;background-size: 0.14rem;padding-right: 0.4rem;}
+	.shop_content .select_div .select_ul{position: absolute;width: 2.25rem;background: #fff;right: 0;border: 1px solid #ccc;border-top: none;
+	display: none;z-index: 12;}
+	.shop_content .select_div ul{background: #fff;max-height: 2.2rem;padding: 0.2rem 0;overflow-y:scroll !important;}
+	.shop_content .select_div ul li{width:100%;margin: auto;height: 0.5rem;font-size: 0.2rem;line-height: 0.5rem;cursor: pointer;padding-left: 0.3rem;}
+	.shop_content .select_div ul li:hover{background: #f5f5f5;}
+	.shop_content .shop_ul .shop_a{background: #fff; width: 30%;float: right;padding: 0.1rem 0.2rem 0.4rem 0.2rem;}
+	.shop_content .shop_ul .two_a{width: 100%;margin: auto;display: block;height: 0.5rem;line-height: 0.5rem;
+	background: url(../img/png/shop.png) no-repeat center center;background-size: 0.48rem 0.41rem;}
+	.shop_content .shop_ul .two_a span{display: none;}
 	
 }
 
