产品列表 详情 (未完)

--- a/catalog/view/theme/default/product.html
+++ b/catalog/view/theme/default/product.html
@@ -221,7 +221,7 @@
 					<ul class="pro_ul">
 						<li>
 							<a href="###">
-								<div class="pic_img">
+								<div class="pic_img" style="background:block;">
 									<img src="img/jpg/product1.jpg"/>
 								</div>
 								<div class="text clearfix">
@@ -234,7 +234,7 @@
 						</li>
 						<li>
 							<a href="###">
-								<div class="pic_img">
+								<div class="pic_img" style="background:red;">
 									<img src="img/jpg/product1.jpg"/>
 								</div>
 								<div class="text clearfix">
@@ -429,6 +429,7 @@
 						</li>
 					</ul>
 				</div>
+				<!-- 分页 -->
 				<div class="bot clearfix">
 					<div class="left">
 						<ul>
@@ -447,6 +448,7 @@
 						<p>Double Drawn Funmi Hair [<span>24</span>]</p>
 					</div>
 				</div>
+				<!-- 分页 -->
 			</div>
 		</div>
 		
